# exchange-simulator

./: .env  .gitignore  Cargo.toml  Makefile  README.md  READMEIA.md  requirements.txt
backtests/: bt_runner.py  strategy_api.py
backtests/strategies/: sma.py
config/: default.yaml
data/: binance_api.py  binance_files.py  duckdb_source.py
gateway/: README.md  __init__.py  app.py  main.py  sim_gateway.txt
gateway/api/: __init__.py  deps.py  routes_account.py  routes_admin.py  routes_market.py  routes_meta.py  routes_orders.py
gateway/core/: __init__.py  executor.py  models.py  replayer.py  state.py  store.py
gateway/utils/: __init__.py  binance.py  time.py
gateway/ws/: stream.py
replay/: replayer.py
scripts/: analyze_trades.py  e2e_binance.py  init_duckdb.py  load_to_duckdb.py  make_features.py  make_local_data.py  save_reports_to_duckdb.py
sim/: __init__.py  entities.py  enums.py  exchange_sim.py  fill_models.py  models.py
sim/adapters/: binance_like.py
src/: error.rs  lib.rs  main.rs  oas.rs
src/api/: errors.rs  mod.rs
src/api/v1/: account.rs  datasets.rs  debug.rs  dev.rs  ingest.rs  market.rs  market_binance.rs  mod.rs  orders.rs  sessions.rs  ws.rs
src/api/v3/: account.rs  mod.rs  orders.rs  ws.rs
src/api/v3/orders/: adapters.rs  errors.rs  handlers.rs  mappers.rs  mod.rs  types.rs  validators.rs
src/app/: bootstrap.rs  mod.rs  router.rs
src/domain/: mod.rs  models.rs  traits.rs  value_objects.rs
src/domain/models/: dataset_status.rs  mod.rs
src/dto/: account.rs  datasets.rs  market.rs  mod.rs  orders.rs  sessions.rs  ws.rs
src/dto/v3/: account.rs  error.rs  mod.rs  orders.rs  trades.rs
src/infra/: clock.rs  config.rs  mod.rs
src/infra/binance/: client.rs  mod.rs
src/infra/duckdb/: agg_trades_repo.rs  db.rs  ingest_repo.rs  ingest_runner.rs  ingest_sql.rs  market_repo.rs  mod.rs  schema.rs  types.rs
src/infra/ingest/: mod.rs  progress_sink.rs
src/infra/progress/: ingestion_registry.rs  mod.rs
src/infra/repos/: memory.rs  mod.rs  order_id_mapping.rs  orders_repo.rs
src/infra/repos/duckdb/: mod.rs  sessions_repo.rs
src/infra/ws/: broadcaster.rs
src/oas/: mod.rs  v3.rs
src/services/: account_service.rs  ingest_service.rs  market_service.rs  matching_spot.rs  mod.rs  orders_service.rs  replay_service.rs  sessions_service.rs
storage/: duckdb_store.py
tests/: integration.rs  spot_matching.rs  test_fills.py  test_pnl.py
