[package]
name = "exchange-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum 0.6 (alineado con hyper 0.14)
axum = { version = "=0.6.20", features = ["macros", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }

# tower-http 0.4 (compat axum 0.6)
tower = "0.4"
tower-http = { version = "=0.4.4", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utoipa v4 (OpenAPI)
utoipa = { version = "=4.2.3", features = ["axum_extras", "chrono", "uuid"] }

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "=0.4.31", features = ["serde", "clock"] }
thiserror = "1"
duckdb = { version = "0.9.2", features = ["bundled"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"
async-trait = "0.1"

# Cliente HTTP moderno (independiente del servidor)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

anyhow = "1"
tungstenite = "0.23"
rand = { version = "0.8", features = ["std"] }

[dev-dependencies]
# Compat con axum 0.6/hyper 0.14
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tempfile = "3"
